--- a/apps.json
+++ b/apps.json
@@ -2,5 +2,6 @@
     {"name":"Edith", "file":"apps/edith.js"},
     {"name":"Weather", "file":"apps/currentWeather.js"},
     {"name":"Fit", "file":"apps/fit.js"},
+    {"name":"StartStop", "file":"apps/voiceStartAndStop.js"},
     {"name":"Time", "file":"apps/time.js"}
 ]}
